--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ nav {
   }
 }
 
+#toAbout ion-icon {
+  animation: fadeOutRight 2s infinite;
+}
+
 @media screen and (max-width: 500px) {
   .nav-props {
     /* background: url(../assets/image/3431856.jpg) center; */
@@ -205,6 +209,8 @@ nav {
 
   .nav-prop {
     margin: 15px;
+    animation: "fadeInLeft 1s 1";
+    display: none;
   }
 }
 
